--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -116,7 +116,7 @@ bookmarksopenlevel=10
 \DeclareMathOperator{\Objects}{\mathit{Objects}}
 \DeclareMathOperator{\Hom}{\mathit{Hom}}
 \DeclareMathOperator{\ihom}{\mathit{hom}}
-\DeclareMathOperator{\Nat}{\mathit{Nat}}
+\DeclareMathOperator{\Nat}{\mathit{Natural}}
 \DeclareMathOperator{\Fun}{\mathit{Functor}}
 \def\objc{\Objects(\cat{C})}
 \newcommand{\Set}{\fcat{Set}}           % Sets
@@ -144,19 +144,15 @@ bookmarksopenlevel=10
 
 \section{The Big Picture}
 
-The Yoneda Lemma is a basic and beloved result in category theory. In most treatments it
-shows up fairly early in the books and lecture notes on the subject. Its statement is
-deceivingly compact because its content is buried inside layers of abstraction and
-notation that have been built up while working through the conceptual basis of category
-theory. For me the hard part of understanding this result was unwrapping the abstraction
+The Yoneda Lemma is a basic and beloved result in category theory. Its statement is
+deceivingly simple because its content is buried inside layers of abstraction and
+notation. For me the hard part of understanding this result was unwrapping the abstraction
 ladder.
 
 I am going to do the following dumb thing: I am going to state the result at the top to
-give us the target. Then I will define the only the pieces we need to make that result
-make sense as fast as possible, so all of the material is contained in a single small
-document for easy reference. In the spirit of video game speedruns, we will only write down
-what is absolutely necessary, and it will skip a lot of interesting material
-for the purposes of speed.
+give us the target. Then, in the spirit of video game speedruns, we will only
+write down what we absolutely need to to understand the Lemma, running past a lot of
+interesting material that is not absolutely necessary to reach our goal.
 
 Note that I am not a mathematician or a category theory expert. I'm just wrote this
 down trying to figure out the language.
@@ -430,7 +426,7 @@ $$
 $$
 using the following assignments:
 \begin{itemize}
-\item A mapping from $\CC \to \Set$ that assigns to each $Y in \Objects(\CC)$ the set
+\item A mapping from $\CC \to \Set$ that assigns to each $Y \in \Objects(\CC)$ the set
 $\Arrows(X,Y)$
 \item A mapping from $\Arrows(\CC) \to \Arrows(\Set) $ that assigns to each arrow $f: A
 \to B$ the function defined by mapping each $g: X \to A$ the arrow $f\circ g$.
@@ -459,7 +455,7 @@ objects and functors:
 
 \begin{defn}
  Let $\cat{C}$ be a category. A functor $F:\cat{C}\to\Set$ is called \emph{representable}
- if it is naturally isomorphic to the functor $\Hom_\cat{C}(X,-):\cat{C}\to\Set$ for some
+ if it is naturally isomorphic to the functor $\Arrows_\cat{C}(X,-):\cat{C}\to\Set$ for some
  object $X$ of $\cat{C}$. In that case we call $X$ the \emph{representing object}. 
 \end{defn}
 \noindent
@@ -537,16 +533,17 @@ So now we can break it down:
 \begin{itemize}
 \item A locally small category $\CC$ means that all of the collections of arrows are sets.
 So the functor $\Arrows(X,-)$ maps objects in $\CC$ to sets of arrows.
-\item $\Nat(\Arrows(X, -),F)$ are the natural transformations from $\Arrows(X,-) \fto F$.
-\item In priciple $\Nat(\Arrows(X, -),F)$ could be a giant complicated thing.
+\item $\Nat(\Arrows(X, -),F)$ are the natural transformations from $\Arrows(X,-)$ to $F$.
+\item In principle $\Nat(\Arrows(X, -),F)$ could be a giant complicated thing.
 \item But actually it can only be as large as $FX$.
-\item In other words, every natural transformation is essentially
-an element of the set $FX$.
+\item In other words, every natural transformation is the same as
+an element of the set $FX$. You can see how this is similar to 
+the idea of a representable functor, except for natural transformations.
 \item Which is pretty amazing.
 \end{itemize}
 \noindent
-The recipe for achieving this is also easy as pie. You can defne the mapping you need just by
-assigning each transformation its value at the idenity. So we map each $\alpha: \Arrows(X, -) \fto F$ 
+The recipe for achieving this is also easy as pie. You can define the mapping you need just by
+assigning each transformation its value at the identity. So we map each $\alpha: \Arrows(X, -) \fto F$ 
 to $\alpha_X(1_X) \in FX$.
 
 To write this in the covariant language, you just change $\Arrows(X, -)$ to $\Arrows(-, X)$, which
@@ -573,7 +570,7 @@ naturally in $X \in \CC$ and $F \in \pshf{\CC}$.
 \noindent
 Here $[\CCop, \Set]$ is the category of functors from $\CCop$ to $\Set$ and $\h_X$ is the corresponding
 arrow functor. The notation $\pshf{\CC}(\h_X, F)$ denotes the arrows in the category $\pshf{\CC}$ between 
-$\h_X$ and $F$.
+$\h_X$ and $F$, so it's the same as $\Nat(\h_X, F)$
 
 \bigskip\noindent
 Emily Rhiel writes it down like this:
@@ -587,7 +584,7 @@ that associates each natural transformation $\alpha:\CC(X,-) \fto F$ with the el
 $\alpha_X(1_X) \in FX$. Moreover, this correspondence is natural in both $X$ and $F$.
 \end{lemma}
 \noindent
-Which is pretty easy to translate.
+Here $\Hom(\CC(X,-), F)$ means $\Nat(\Arrows(X,-), F)$.
 
 \bigskip\noindent
 Peter Smith does this
