--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -130,6 +130,10 @@ bookmarksopenlevel=10
 
 \newcommand{\fto}{\Rightarrow}
 
+\def\pg{\bigskip\goodbreak
+\ni}
+\def\ni{\goodbreak\noindent}
+
 \usepackage{microtype}
 
 \begin{document}
@@ -144,44 +148,41 @@ bookmarksopenlevel=10
 
 \section{The Big Picture}
 
-The Yoneda Lemma is a basic and beloved result in category theory. Its statement is
-deceivingly simple because its content is buried inside layers of abstraction and
-notation. For me the hard part of understanding this result was unwrapping the abstraction
-ladder.
+The Yoneda Lemma is a basic and beloved result in category theory. Even though it is called
+a ``Lemma'', a word usually used to describe a minor result that you prove on the way
+to the main event, the Yoneda Lemma {\it is} a main event. It is a result that expresses
+one of the main goals of category theory: how to characterize simple universal facts
+about general abstract constructs.
 
-I am going to do the following dumb thing: I am going to state the result at the top to
-give us the target. Then, in the spirit of video game speedruns, we will only
-write down what we absolutely need to to understand the Lemma, running past a lot of
-interesting material that is not absolutely necessary to reach our goal.
+Its statement is deceivingly simple \cite{Rhiel2016}:
 
-Note that I am not a mathematician or a category theory expert. I'm just wrote this
+\pg
+Let $\CC$ be a locally small category. Let $X$ be an
+object of $\CC$, and let $F: \CC \to \Set$ be a functor from $\CC$ to the category $\Set$.
+Then there is an invertible mapping
+$$
+\Hom(\CC(X, -)) \iso F
+$$
+and this mapping is natural in both $F$ and $X$.
+
+\pg
+But as Sean Carroll famously wrote about General Relativity, ``\dots, 
+these statements are incomprehensible unless you sling the lingo'' \cite{carroll}.
+
+I am going to do the following dumb thing: having stated a version of the lemma above
+I'm going to try and explain just the parts of the category theory language needed to parse it
+as fast as possible. Then we will restate the result in several ways at the end for perspective.
+
+In the spirit of video game speedruns,
+we will skip almost all of the other interesting material in category theory to get to the end
+of our ``game'' as fast as possible.
+
+\pg
+{\bf Note}: I am not a mathematician or a category theory expert. I just wrote this
 down trying to figure out the language.
 So everything in this document is probably wrong.
 
-\section{Statement of the Lemma}
-
-The Lemma is usually stated in some form similar this:
-
-\begin{lemma}[Yoneda]\label{yoneda} Let $\CC$ be a locally small category. Let $X$ be an
-object of $\CC$, and let $F: \CC \to \Set$ be a functor from $\CC$ to the category $\Set$.
-Then there is an invertible mapping between the set of natural transformations from
-$\Arrows(X, -)$ to $F$ and the elements of $FX$ and this mapping is natural in both $F$
-and $X$.
-\end{lemma}
 \goodbreak
-\noindent
-To make sense of this we need to look into the various parts of the statement:
-\begin{itemize}
-\item Categories
-\item Functors
-\item Natural transformations
-\item Functor categories
-\item Catgories and sets.
-\end{itemize}
-\noindent
-So that's the path that we will take, and when we get to the end we'll state the result
-again in various other ways.
-
 \section{Categories}
 
 Categories have a deliciously multi-part definition.
@@ -213,7 +214,7 @@ A \to C$ called the {\it composition} of $f$ and $g$. This is also sometimes wri
 For each $A \in \objc$ there is a function $1_A: A \to A$, called the {\it identity} at
 $A$ that maps $A$ to itself. Sometimes this object is also written as $\id_A$.
 \end{itemize}
-\goodbreak\noindent Finally, we have the last two rules:
+\goodbreak\ni Finally, we have the last two rules:
 
 \begin{itemize}
 \item For any $f: A \to B$ we have that $1_B \circ f$ and $f \circ 1_A$ are both equal to
@@ -222,7 +223,7 @@ $f$.
 \circ (g \circ f)$, or alternatively $(hg)f$ = $h(gf)$. What this also means is that we
 can always just write $hgf$ if we want. \end{itemize}%
 \end{defn}%
-\noindent
+\ni
 We will call the collection of all arrows from $A$ to $B$ $\Arrows_{\CC}(A, B)$. We will
 usually write $\Arrows(A,B)$ when it's clear what category $A$ and $B$ come from. People
 also write $\Hom(A, B)$ or $\Hom_{\CC}(A,B)$, or $\ihom(A, B)$ or just $\CC(A,B)$ to mean
@@ -230,6 +231,7 @@ $\Arrows(A,B)$. Here ``$\Hom$'' stands for homomorphism, which is a standard wor
 mappings that preserve some kind of structure. Category theory, and the Yoneda Lemma, it
 it turns out, is mostly about the arrows.
 
+\goodbreak
 At this point every category theory book will list a few dozen examples of categories. 
 These will have strangely truncated names like
 $\cat{Measu}$ or $\cat{Htpy}$ or $\cat{Matr}$.
@@ -254,7 +256,7 @@ A category $\CC$ is called {\it small} if $\Arrows(\CC)$ is a set.
 \begin{defn}
 A category $\CC$ is called {\it locally small} if $\Arrows_{\CC}(A,B)$ is a set for every
 $A, B \in \CC$. \end{defn}%
-\noindent
+\ni
 For the rest of this note we will only deal with locally small categories, since in the
 the setup for the Lemma, we are given a category $\CC$ that is locally small.
 
@@ -266,7 +268,7 @@ $g: B \to A$ such that $gf = 1_X$ and $fg = 1_Y$. We say that the objects $X$ an
 {\it isomorphic} to each other whenever there exists an isomorphism between them. If two
 objects in a category are isomorphic to each other we write $X \iso Y$.
 \end{defn}
-\noindent
+\ni
 Note that in the category $\cat{Set}$ the isomorphisms are exactly the invertible mappings
 between sets.
 
@@ -289,7 +291,7 @@ sets of parallel rules. First:
 \item For each arrow $f: X \to Y$ in $\CC$ we assign an arrow $F(f): F(X) \to F(Y)$ in
 $\DD$.
 \end{itemize}
-\noindent
+\ni
 So $F$ maps objects in $\CC$ to objects in $\DD$ and also arrows in $\CC$ to arrows in
 $\DD$ such that the domains and codomains match up the right way. That is, the domain of
 $F(f)$ is $F$ applied to the domain of $f$, and the codomain of $F(f)$ is $F$ applied to
@@ -301,7 +303,7 @@ F(f)$ (or $F(gf) = F(g)F(f)$).
 \end{itemize}
 
 \end{defn}
-\noindent
+\ni
 So, a functor consists of two mappings, one on objects and one on arrows. And, these
 mappings preserve all of the structure of a category, namely domains and codomains,
 composition, and identities.
@@ -334,7 +336,7 @@ has to commute:
   \end{tikzcd}
   $$
 \end{defn}
-\noindent
+\ni
 This is the first commutative diagram that I've tossed up. There is no magic here. The
 idea is that you get the same result no matter which way you travel through the diagram.
 So here $\alpha_Y \circ F$ and $G \circ \alpha_X$ must be equal.
@@ -354,8 +356,8 @@ given to you in the categories at hand. The natural transformation takes the act
 on $\CC$ and lines it up exactly with the action of $G$ on $\CC$. No other assumptions or
 conditions are needed. In this sense they define a relationship between functors that is
 just sitting there in the world no matter what, and thus ``natural''. Another apt way of
-putting this is that natural transformations give a canonical way of mapping between the
-images of two functors.
+putting this is that natural transformations give a canonical way of moving between the
+images of two functors \cite{Goedecke}.
 
 As with arrows, it will be useful to define what an isomorphism means in the context of
 natural transformations:
@@ -380,7 +382,7 @@ transformations. So the next obvious thing is to make a category out of them.
   \item Morphisms are natural transformations $\alpha:F\fto G$.
  \end{itemize}
 \end{defn}
-\noindent
+\ni
 Right now you should be wondering to yourself: ``wait, does this definition actually
 work?'' I have brazenly claimed without any justification that the it's OK to use the
 natural transformations as arrows. Luckily it's fairly clear that this works out if you
@@ -392,7 +394,7 @@ just do everything component-wise. So if we have all of these things:
 
 \item One object $X \in \CC$.
 \end{itemize}
-\noindent
+\ni
 Then you can define $(\beta \circ \alpha)(X) = \beta(X) \circ \alpha(X)$ and you get the
 right behavior. Similarly, the identity transformation $1_F$ can be defined
 component-wise: $(1_F)(X) = 1_{F(X)}$.
@@ -410,7 +412,7 @@ Let $\CC$ and $\DD$ be categories, and let $F, G \in \Fun(\CC, \DD)$. Then
 we'll write $\Nat(F, G)$ for the set of all natural transformations from $F$ to $G$, which
 in this context is the same as the arrows from $F$ to $G$ in the functor category.
 \end{defn}
-\noindent
+\ni
 You will also see people write $\Hom(F, G)$ or $\CC(F, G)$ for this, which overloads
 $\Hom$ to work on both categories and functor categories.
 
@@ -431,11 +433,11 @@ $\Arrows(X,Y)$
 \item A mapping from $\Arrows(\CC) \to \Arrows(\Set) $ that assigns to each arrow $f: A
 \to B$ the function defined by mapping each $g: X \to A$ the arrow $f\circ g$.
 \end{itemize}
-\noindent
+\ni
 Some texts call a functor defined this way the functor {\it represented} by $X$, which
 will make sense when we get back to the Lemma.
 \end{defn}
-\noindent
+\ni
 The definition for objects here is pretty clear. But the one for arrows maybe needs some
 thought. Given an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ applied to
 $f$ is an arrow from $\Arrows(X,A) \to \Arrows(X,B)$. Since $\CC$ is locally small $f \in
@@ -458,12 +460,10 @@ objects and functors:
  if it is naturally isomorphic to the functor $\Arrows_\cat{C}(X,-):\cat{C}\to\Set$ for some
  object $X$ of $\cat{C}$. In that case we call $X$ the \emph{representing object}. 
 \end{defn}
-\noindent
+\ni
 Using objects of one kind to represent objects of another kind is the bread and butter of many
 different kinds of mathematical inquiry. Often it allows  you to study something simple in place
 of something complicated (e.g. a single object rather than a whole functor).
-While this definition is not used directly in our discussion of the Lemma, it's closely
-related to what the Lemma ultimately says about functors.
 
 We can actually return to the statement of the Yoneda Lemma now, but 
 I'm going to take one tangent first to define one more handy piece of
@@ -488,7 +488,7 @@ B) = \CCop(B, A)$.
 \item Composition of arrows is the same, but with the arguments reversed.
 \end{itemize}
 \end{defn}
-\noindent
+\ni
 The {\it principle of duality} then says, informally, that every categorical definition,
 theorem and proof has a dual, obtained by reversing all the arrows.
 
@@ -502,7 +502,7 @@ functor $F: \CCop \to \DD$ where:
 \item For each arrow $f \in \Arrows(\CC)$ an arrow $F(X): Y \to X$.
 \end{itemize}
 \goodbreak
-\noindent
+\ni
 In addition
 \begin{itemize}
 \item For any two arrows $f, g \in \Arrows(\CC)$ where $g \circ f$ is defined we have
@@ -511,49 +511,47 @@ $F(f) \circ F(g) = F(g \circ f)$.
 \end{itemize}
 
 \end{defn}
-\noindent
+\ni
 Note how the arrows go backwards when they need to. With this terminology in mind, we call
 regular functors from $\CC \to \DD$ {\it covariant}.
 
 Now we have all the language we need to look at the statement of the Lemma again.
 
-\section{The Lemma Returns}
+\section{Yoneda Again}
 
-So, here is what we wrote down before, now that we know what all the words mean:
+So, here is what we wrote down before, more verbosely, and in my notation.
 
-\begin{lemma}[Yoneda]\label{yoneda} Let $\CC$ be a locally small category and $F:\CC \to \Set$ a functor.
-Let $X$ be an object of $\CC$.
-Then there is an invertible mapping between
-$\Nat(\Arrows(X, -),F)$
-and the elements of $FX$. In addition this
-mapping is natural in both $F$ and $X$.
+\begin{lemma}[Yoneda]\label{yoneda} Let $\CC$ be a locally small category, $F:\CC \to \Set$ a functor,
+and $X \in \objc$. We can define a mapping from $\Nat(\Arrows(X, -),F) \to FX$
+by assigning each transformation $\alpha: \Arrows(X, -) \fto F$ 
+the value $\alpha_X(1_X) \in FX$. 
+This mapping is invertible and is natural in both $F$ and $X$.
 \end{lemma}
-\noindent
+\ni
 So now we can break it down:
 \begin{itemize}
 \item A locally small category $\CC$ means that all of the collections of arrows are sets.
 So the functor $\Arrows(X,-)$ maps objects in $\CC$ to sets of arrows.
-\item $\Nat(\Arrows(X, -),F)$ are the natural transformations from $\Arrows(X,-)$ to $F$.
-\item In principle $\Nat(\Arrows(X, -),F)$ could be a giant complicated thing.
-\item But actually it can only be as large as $FX$.
+\item In principle the natural transformations 
+from $\Arrows(X, -) \fto F$ could be a giant complicated thing.
+\item But actually it can only be as large as $FX$. The fact that this mapping is
+invertible implies
+that $\Nat(\Arrows(X, -),F)$ and  $FX$ are isomorphic (e.g. $\Nat(\Arrows(X, -),F) \iso FX$).
 \item In other words, every natural transformation is the same as
-an element of the set $FX$. You can see how this is similar to 
-the idea of a representable functor, except for natural transformations.
+an element of the set $FX$. In particular, all we need to know is how 
+$\alpha_X(1_X)$ behaves to know
+how any of the natural transformations behave.
 \item Which is pretty amazing.
 \end{itemize}
-\noindent
-The recipe for achieving this is also easy as pie. You can define the mapping you need just by
-assigning each transformation its value at the identity. So we map each $\alpha: \Arrows(X, -) \fto F$ 
-to $\alpha_X(1_X) \in FX$.
-
-To write this in the covariant language, you just change $\Arrows(X, -)$ to $\Arrows(-, X)$, which
+To write this in the contravariant language, you just change $\Arrows(X, -)$ to $\Arrows(-, X)$, which
 switches the direction of all the arrows.
 
-Finally, here are some other ways people write the result, and how their statements translate to 
+\pg
+Finally, here are some other ways people write the result, and how their lingo translates to 
 my notational scheme.
 
-\goodbreak\noindent
-This statement is due to Tom Leinster, and uses the contravariant language.
+\pg
+This statement is due to Tom Leinster \cite{Leinster}, and uses the contravariant language.
 
 \begin{lemma}[Yoneda]   
 \label{yoneda-leinster}
@@ -567,13 +565,13 @@ $$
 %
 naturally in $X \in \CC$ and $F \in \pshf{\CC}$.  
 \end{lemma}
-\noindent
+\ni
 Here $[\CCop, \Set]$ is the category of functors from $\CCop$ to $\Set$ and $\h_X$ is the corresponding
-arrow functor. The notation $\pshf{\CC}(\h_X, F)$ denotes the arrows in the category $\pshf{\CC}$ between 
-$\h_X$ and $F$, so it's the same as $\Nat(\h_X, F)$
+arrow functor. The notation $\pshf{\CC}(\h_X, F)$ denotes the arrows in the functor category $\pshf{\CC}$ between 
+$\h_X$ and $F$, so it's the same as $\Nat(\h_X, F)$.
 
-\bigskip\noindent
-Emily Rhiel writes it down like this:
+\pg
+Emily Rhiel's \cite{Rhiel2016} version is what I used at the top:
 
 \begin{lemma}[Yoneda]\label{yoneda-rhiel} Let $\CC$ be a locally small category and $X \in
 \CC$. Then for any functor $F : \CC \to \Set$ there is a bijection
@@ -583,20 +581,23 @@ $$
 that associates each natural transformation $\alpha:\CC(X,-) \fto F$ with the element
 $\alpha_X(1_X) \in FX$. Moreover, this correspondence is natural in both $X$ and $F$.
 \end{lemma}
-\noindent
+\ni
 Here $\Hom(\CC(X,-), F)$ means $\Nat(\Arrows(X,-), F)$.
 
-\bigskip\noindent
-Peter Smith does this
+\pg
+Peter Smith \cite{Smith} does this:
 
 \begin{lemma}[Yoneda]\label{yoneda-smith} For any locally small category $\CC$, object $X \in
-\CC$, and functor $F:\CC \to \Set$ we have  $\Nat(\CC(X,-),F) \iso FX$ both naturally in
-$X \in \CC$ and $F \in [\CC, \Set]$
+\CC$, and functor $F:\CC \to \Set$ we have  $\mathop{\mathit{Nat}}(\CC(X,-),F) \iso FX$ both naturally in
+$X \in \CC$ and $F \in [\CC, \Set]$.
 \end{lemma}
+\ni
+He uses the $[\CC, \Set]$ notation for the functor category, and $\mathop{\mathit{Nat}}$ where we use $\Nat$.
 
-\bigskip\noindent
-Paolo Perrone has has the contravariant version, and uses the standard term "presheaf" for a functor from
-$\CCop$ to $\Set$. 
+\pg
+Paolo Perrone \cite{Perrone} writes the contravariant version, and uses the standard term "presheaf" 
+for a functor from $\CCop$ to $\Set$.
+
 \begin{lemma}[Yoneda]\label{yoneda-perrone} Let $\cat{C}$ be a category, let $X$ be an object of
  $\cat{C}$, and let $F:\cat{C}^\op\to\Set$ be a presheaf on $\cat{C}$. Consider the map
  from
@@ -607,14 +608,14 @@ $\CCop$ to $\Set$.
  $\alpha_X(\id_X)\in FX$, which is the value of the component $\alpha_X$ of $\alpha$ on
  the identity at $X$. 
 
- This assignment is a bijection, and it is natural both in $X$ and in $F$.
+This assignment is a bijection, and it is natural both in $X$ and in $F$.
 \end{lemma}
-\noindent
-Here he writes $\Hom_{[\cat{C}^\op,\Set]}$ to mean the arrows in the category $[\cat{C}^\op,\Set]$,
+\ni
+Here he writes $\Hom_{[\cat{C}^\op,\Set]}$ to mean the arrows in the functor category $[\cat{C}^\op,\Set]$,
 which are the natural transformations.
 
-\bigskip\noindent
-Finally, Peter Johnstone has my favorite, relatively concrete statement:
+\pg
+Finally, Peter Johnstone \cite{Johnstone} has my favorite, relatively concrete statement:
 
 \begin{lemma}[Yoneda]\label{yoneda-johnstone} Let $\CC$ be a locally small category, let $X$ be an object of $\CC$
 and let $F:\CC \to \Set$ a functor. Then
@@ -623,27 +624,33 @@ and let $F:\CC \to \Set$ a functor. Then
 
 (ii) the bijection in (i) is natural in both $F$ and $X$.
 \end{lemma}
-\section{Who I Stole From}
+
+\section{Final Thoughts}
+
+\newpage
+\begin{thebibliography}{100}
 
 \small
-\begin{itemize}
-\item \url{https://arxiv.org/abs/1912.10642}
 
-\item \url{https://math.jhu.edu/~eriehl/context/}
+\bibitem{carroll} Sean Carroll, \href{https://preposterousuniverse.com/wp-content/uploads/2015/08/grtinypdf.pdf}{A No-Nonsense Introduction to General Relativity},  2001.
 
-\item \url{https://arxiv.org/abs/1612.09375}
+\bibitem{Goedecke} Julia Goedecke, \href{http://www.julia-goedecke.de/pdf/CategoryTheoryNotes.pdf}{\it Category Theory Notes}, 2013.
 
-\item \url{https://www.logicmatters.net/2018/01/29/category-theory-a-gentle-introduction/}
+\bibitem{Johnstone} Peter Johnstone, and David Mehrle \href{http://pi.math.cornell.edu/~dmehrle/notes/partiii/cattheory_partiii_notes.pdf}{Category Theory Lectures, Notes by David Mehrle}, 2015.
 
-\item \url{http://pi.math.cornell.edu/~dmehrle/notes/partiii/cattheory_partiii_notes.pdf}
+\bibitem{Leinster} Tom Leinster, \href{https://arxiv.org/abs/1612.09375}{Basic Category Theory}, 2016.
 
-\item \url{http://www.julia-goedecke.de/pdf/CategoryTheoryNotes.pdf}
+\bibitem{ML} Saunders Mac Lane, \href{https://link.springer.com/book/10.1007%2F978-1-4757-4721-8}{\it Categories for the Working Mathematician}, Second Edition, Springer, 1978.
 
-\item \url{https://www.youtube.com/watch?v=SsgEvrDFJsM}
+\bibitem{Perrone} Paolo Perrone, \href{https://arxiv.org/abs/1912.10642}{\it Notes on Category Theory with examples from basic mathematics}.
 
-\end{itemize}
+\bibitem{Rhiel2016} Emily Rhiel, \href{https://math.jhu.edu/~eriehl/context/}{\it Category Theory in Context}, Dover, 2016.
 
-And of course, a bit from
+\bibitem{Rhiel2020} Emily Rhiel, \href{https://www.youtube.com/watch?v=SsgEvrDFJsM}{ACT 2020 Tutorial: {\it The Yoneda lemma in the category of matrices}}.
 
-\url{https://en.wikipedia.org/wiki/Categories_for_the_Working_Mathematician}
+\bibitem{Smith} Peter Smith, \href{https://www.logicmatters.net/2018/01/29/category-theory-a-gentle-introduction/}{\it Category Theory: A Gentle Introduction
+}, 2019.
+
+\end{thebibliography}
+
 \end{document}
