--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -173,8 +173,8 @@ I am going to do the following dumb thing: having stated a version of the lemma 
 I'm going to try and explain just the parts of the category theory language needed to parse it
 as fast as possible. Then we will restate the result in several ways at the end for perspective.
 
-In the spirit of video game speedruns,
-we will skip almost all of the other interesting material in category theory to get to the end
+In the spirit of video game speedruns \cite{lobos},
+we will skip entire areas of interesting material in category theory to get to the end
 of our ``game'' as fast as possible.
 
 \pg
@@ -378,8 +378,8 @@ transformations. So the next obvious thing is to make a category out of them.
  Let $\CC$ and $\DD$ be categories. The \emph{functor category} between $\CC$ and $\DD$ is
  constructed as follows:
  \begin{itemize}
-  \item Objects are functors $F: \CC \to \DD$;
-  \item Morphisms are natural transformations $\alpha:F\fto G$.
+  \item The objects are functors $F: \CC \to \DD$;
+  \item The arrows are natural transformations $\alpha:F\fto G$.
  \end{itemize}
 \end{defn}
 \ni
@@ -433,13 +433,16 @@ $\Arrows(X,Y)$
 \item A mapping from $\Arrows(\CC) \to \Arrows(\Set) $ that assigns to each arrow $f: A
 \to B$ the function defined by mapping each $g: X \to A$ the arrow $f\circ g$.
 \end{itemize}
-\ni
-Some texts call a functor defined this way the functor {\it represented} by $X$, which
-will make sense when we get back to the Lemma.
 \end{defn}
-\ni
-The definition for objects here is pretty clear. But the one for arrows maybe needs some
-thought. Given an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ applied to
+
+The notation $\Arrows(X,-)$ needs a bit of explanation. Here the idea is that we have defined
+a mapping for some fixed object $X$ and we use the ``$-$'' symbol to mean that to
+denote the value of the map at some other object $Y$ (or arrow $f$) we will write 
+$\Arrows(X,Y)$ (or $\Arrows(X,f)$). This is a bit of an abuse of notation since we 
+are using the symbol $\Arrows$ to mean two different things. But oh well.
+
+The definition of the mapping for arrows also needs a bit of thought.
+Given an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ applied to
 $f$ is an arrow from $\Arrows(X,A) \to \Arrows(X,B)$. Since $\CC$ is locally small $f \in
 \Arrows(\Set)$. Now, if $g: X \to A$ we have that $(f \circ g): X \to B$ is the arrow we
 want. This mapping on $f$ is called the {\it post-composition} mapping, since it composes
@@ -452,7 +455,9 @@ Other notations for this functor include just $\CC(X,-)$, $\Hom(X, -)$, $\Hom_{\
 -)$, $H^X$ and $h^X$. In my notational convention we probably should have written this as
 $\Arrows_{\CC}(X, -)$. Some people also call this kind of functor a {\it hom-functor}.
 
-Finally, we can use the above definition to characterize an important relationship between
+Finally, I'll note here that
+we call a functor defined this way the functor {\it represented} by and object $X$.
+In addition, we can characterize another important relationship between
 objects and functors:
 
 \begin{defn}
@@ -465,11 +470,11 @@ Using objects of one kind to represent objects of another kind is the bread and 
 different kinds of mathematical inquiry. Often it allows  you to study something simple in place
 of something complicated (e.g. a single object rather than a whole functor).
 
+\section{Opposites and Duals}
+
 We can actually return to the statement of the Yoneda Lemma now, but 
 I'm going to take one tangent first to define one more handy piece of
 the conceptual framework of category theory.
-
-\section{Opposites and Duals}
 
 This section is the one optional side quest that I'm including because it comes up in
 comparing different versions of the Lemma. Duality in mathematics comes up in a lot of
@@ -515,10 +520,9 @@ $F(f) \circ F(g) = F(g \circ f)$.
 Note how the arrows go backwards when they need to. With this terminology in mind, we call
 regular functors from $\CC \to \DD$ {\it covariant}.
 
-Now we have all the language we need to look at the statement of the Lemma again.
-
 \section{Yoneda Again}
 
+Now we have all the language we need to look at the statement of the Lemma again.
 So, here is what we wrote down before, more verbosely, and in my notation.
 
 \begin{lemma}[Yoneda]\label{yoneda} Let $\CC$ be a locally small category, $F:\CC \to \Set$ a functor,
@@ -618,7 +622,7 @@ which are the natural transformations.
 Finally, Peter Johnstone \cite{Johnstone} has my favorite, relatively concrete statement:
 
 \begin{lemma}[Yoneda]\label{yoneda-johnstone} Let $\CC$ be a locally small category, let $X$ be an object of $\CC$
-and let $F:\CC \to \Set$ a functor. Then
+and let $F:\CC \to \Set$ be a functor. Then
 
 (i)  there is a bijection between natural transformations $\CC(X, -) \fto F$
 
@@ -627,18 +631,36 @@ and let $F:\CC \to \Set$ a functor. Then
 
 \section{Final Thoughts}
 
-\newpage
+There are two loose ends to tie up.
+
+First, I wish I had been able to think of a better notation for the ``arrow functor'' that 
+does not use the ``$-$'' placeholder. Trying to do so makes defining the mapping
+in the lemma awkward since you now have to keep track of multiple dummy variables. 
+The $\h_X$ and $\h^X$ notations avoid it but add yet another 
+notational layer, so I did not like that either. Also, why is it called $H$? 
+Maybe short for {\it Hom}? Who knows. I thought about
+using a $\lambda$-calculus style notation but that would probably be too weird for people.
+
+Second, we define some terminology around representations of functors when we defined the arrow functor. But 
+it never came up again later. If we had continued to explore the implications of the lemma then this idea would
+have come back. In particular the lemma implies that if two objects 
+in a category represent functors that are isomorphic
+then the objects are also isomorphic. The Yoneda Lemma also lets us define a notion of {\it universal property} 
+of an object $X \in C$ using a representable functor $F$ and a particular object in $F(X)$.
+Any of the references below will go into all of this in more detail.
+
+\goodbreak
 \begin{thebibliography}{100}
 
-\small
-
-\bibitem{carroll} Sean Carroll, \href{https://preposterousuniverse.com/wp-content/uploads/2015/08/grtinypdf.pdf}{A No-Nonsense Introduction to General Relativity},  2001.
+\bibitem{carroll} Sean Carroll, \href{https://preposterousuniverse.com/wp-content/uploads/2015/08/grtinypdf.pdf}{\it A No-Nonsense Introduction to General Relativity},  2001.
 
 \bibitem{Goedecke} Julia Goedecke, \href{http://www.julia-goedecke.de/pdf/CategoryTheoryNotes.pdf}{\it Category Theory Notes}, 2013.
 
-\bibitem{Johnstone} Peter Johnstone, and David Mehrle \href{http://pi.math.cornell.edu/~dmehrle/notes/partiii/cattheory_partiii_notes.pdf}{Category Theory Lectures, Notes by David Mehrle}, 2015.
+\bibitem{Johnstone} Peter Johnstone, \href{http://pi.math.cornell.edu/~dmehrle/notes/partiii/cattheory_partiii_notes.pdf}{\it Category Theory}, notes written by David Mehrle, 2015.
 
 \bibitem{Leinster} Tom Leinster, \href{https://arxiv.org/abs/1612.09375}{Basic Category Theory}, 2016.
+
+\bibitem{lobos} LobosJr, \href{https://www.youtube.com/watch?v=ImMOdTxtf-s}{\it Dark Souls 1 Speedrun, Personal Best}, 2013.
 
 \bibitem{ML} Saunders Mac Lane, \href{https://link.springer.com/book/10.1007%2F978-1-4757-4721-8}{\it Categories for the Working Mathematician}, Second Edition, Springer, 1978.
 
