--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -413,8 +413,8 @@ we'll write $\Nat(F, G)$ for the set of all natural transformations from $F$ to 
 in this context is the same as the arrows from $F$ to $G$ in the functor category.
 \end{defn}
 \ni
-You will also see people write $\Hom(F, G)$ or $\CC(F, G)$ for this, which overloads
-$\Hom$ to work on both categories and functor categories.
+You will also see people write $\Hom(F, G)$, $\Hom_{\CC}(F,G)$ or $\CC(F, G)$ for this in the context
+of functor categories.
 
 \section{Represented Functors}
 
