just use f-star

--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -431,7 +431,7 @@ using the following assignments:
 \item A mapping from $\CC \to \Set$ that assigns to each $Y \in \Objects(\CC)$ the set
 $\Arrows(X,Y)$
 \item A mapping from $\Arrows(\CC) \to \Arrows(\Set) $ that assigns to each arrow $f: A
-\to B$ to a mapping defined as $f\circ g$ for each arrow $g: X \to A$.
+\to B$ to a mapping $f_*$ defined by $f_*(g) = f\circ g$ for each arrow $g: X \to A$.
 \end{itemize}
 \end{defn}
 
@@ -442,18 +442,23 @@ $\Arrows(X,Y)$. This is a bit of an abuse of notation since we
 are using the symbol $\Arrows$ to mean two different things. But oh well.
 
 The definition of the mapping for arrows also needs a bit of thought.
-Given an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ applied to
-$f$ is an arrow from $\Arrows(X,A) \to \Arrows(X,B)$.  If we have some other arrow
-$g: X \to A$ then the value that we want is $(f \circ g): X \to B$.
-We write this mapping as $f \circ -$, and call it the {\it post-composition} map of $f$.
-You also see it written as $f_*$.
+Given an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ 
+applied to $f$ is an arrow that maps $\Arrows(X,A) \to \Arrows(X,B)$ that
+we will call $f_*$.  
+If $g: X \to A$ is in $\Arrows(X,A)$
+then the value 
+that we want for $f_*$ at $g$ is 
+is $f_*(g) = (f \circ g): X \to B$.
+This mapping is called the {\it post-composition} map of $f$.
+You also see it written as $f \circ -$.
+The {\it pre-composition} map is then $f^*$ or $- \circ f$.
 
-So, we have worked out that the value of $\Arrows(X,-)$ at $f$ should be $f \circ -$.
-In a slight abuse of notation we write
-$\Arrows(X,-)(f) = \Arrows(X,f) = f \circ -$. 
-Check over this flow in your head, and note that 
-there are {\it two} function applications going on, which is what makes this definition 
-confusing.
+Thus, we have worked out that the value of $\Arrows(X,-)$ at $f$ should be the arrow $f_*$.
+We can also write this as
+$\Arrows(X,-)(f) = \Arrows(X,f) = f \circ -$ to maximize the use of different placeholder symbols.
+Check over this formula in your head, and note that 
+there are {\it two} function applications (one for the functor, and one for the post-composition arrow), 
+and two different kinds of placeholder.
 
 Other notations for this functor include just $\CC(X,-)$, $\Hom(X, -)$, $\Hom_\CC(X,
 -)$, $H^X$ and $h^X$. In my notational convention we probably should have written this as
@@ -552,7 +557,7 @@ how any of the natural transformations behave.
 \item Which is pretty amazing.
 \end{itemize}
 To write this in the contravariant language, you just change $\Arrows(X, -)$ to $\Arrows(-, X)$, which
-switches the direction of all the arrows.
+switches the direction of all the arrows and the order of composition.
 
 \pg
 Finally, here are some other ways people write the result, and how their lingo translates to 
