just use f-star

--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -441,10 +441,10 @@ denote the value of the map at some other object $Y$ we will write
 $\Arrows(X,Y)$. This is a bit of an abuse of notation since we 
 are using the symbol $\Arrows$ to mean two different things. But oh well.
 
-The definition of the mapping for arrows also needs a bit of thought.
+The definition of the mapping for arrows also needs a bit of explanation.
 Given an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ 
-applied to $f$ is an arrow that maps $\Arrows(X,A) \to \Arrows(X,B)$ that
-we will call $f_*$.  
+applied to $f$ is an arrow that maps $\Arrows(X,A) \to \Arrows(X,B)$.
+We will call this arrow $f_*$.  
 If $g: X \to A$ is in $\Arrows(X,A)$
 then the value 
 that we want for $f_*$ at $g$ is $f_*(g) = (f \circ g): X \to B$.
@@ -454,7 +454,7 @@ The {\it pre-composition} map is then $f^*$ or $- \circ f$.
 
 Thus, we have worked out that the value of $\Arrows(X,-)$ at $f$ should be the arrow $f_*$.
 We can also write this as
-$\Arrows(X,-)(f) = \Arrows(X,f) = f \circ -$ to maximize the use of different placeholder symbols.
+$\Arrows(X,-)(f) = \Arrows(X,f) = f \circ -$ to maximize the use of name overloading.
 Check over this formula in your head, and note that 
 there are {\it two} function applications (one for the functor, and one for the post-composition arrow), 
 and two different kinds of placeholder.
@@ -648,7 +648,7 @@ I also don't really like the ``$-$'' placeholder symbol but trying to not use th
 it makes various definitions
 even more awkward since you now have to keep track of multiple dummy variables. 
 The $\h_X$ and $\h^X$ notations avoid it but add yet another 
-notational layer, so I did not like that either. Also, why is it called $H$? 
+naming layer, so I did not like that either. Also, why is it called $H$? 
 Maybe short for {\it Hom}? Who knows. 
 
 Second, we define some terminology around representations of functors when we defined the arrow functor. But 
