clean up arrow functor some more

--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -436,10 +436,11 @@ $\Arrows(X,Y)$
 \end{defn}
 
 The notation $\Arrows(X,-)$ needs a bit of explanation. Here the idea is that we have defined
-a mapping for some fixed object $X$ and we use the ``$-$'' symbol to mean that to
-denote the value of the map at some other object $Y$ we will write 
-$\Arrows(X,Y)$. This is a bit of an abuse of notation since we 
-are using the symbol $\Arrows$ to mean two different things. But oh well.
+a mapping with two arguments and an object $X$. Then we use the ``$-$'' symbol as a 
+placeholder for the second argument. So then we write $\Arrows(X,Y)$ for
+the value of the map at some other object $Y$. 
+This is a bit of an abuse of notation since we 
+are apparently using the symbol $\Arrows$ to mean two different things. But oh well.
 
 The definition of the mapping for arrows also needs a bit of explanation.
 Given an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ 
@@ -455,6 +456,7 @@ The {\it pre-composition} map is then $f^*$ or $- \circ f$.
 Thus, we have worked out that the value of $\Arrows(X,-)$ at $f$ should be the arrow $f_*$.
 We can also write this as
 $\Arrows(X,-)(f) = \Arrows(X,f) = f \circ -$ to maximize the use of name overloading.
+
 Check over this formula in your head, and note that 
 there are {\it two} function applications (one for the functor, and one for the post-composition arrow), 
 and two different kinds of placeholder.
@@ -524,7 +526,7 @@ $F(f) \circ F(g) = F(g \circ f)$.
 \end{itemize}
 
 \end{defn}
-\ni
+\noindent
 Note how the arrows go backwards when they need to. With this terminology in mind, we call
 regular functors from $\CC \to \DD$ {\it covariant}.
 
