clean up arrow functor some more

--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -149,9 +149,9 @@ bookmarksopenlevel=10
 \section{The Big Picture}
 
 The Yoneda Lemma is a basic and beloved result in category theory. Even though it is called
-a ``Lemma'', a word usually used to describe a minor result that you prove on the way
-to the main event, the Yoneda Lemma {\it is} a main event. It is a result that expresses
-one of the main goals of category theory: how to characterize simple universal facts
+a ``lemma'', a word usually used to describe a minor result that you prove on the way
+to the main event, the Yoneda lemma {\it is} a main event. It is a result that expresses
+one of the main goals of category theory: it characterizes simple universal facts
 about general abstract constructs.
 
 Its statement is deceivingly simple \cite{Rhiel2016}:
@@ -228,13 +228,15 @@ We will call the collection of all arrows from $A$ to $B$ $\Arrows_{\CC}(A, B)$.
 usually write $\Arrows(A,B)$ when it's clear what category $A$ and $B$ come from. People
 also write $\Hom(A, B)$ or $\Hom_{\CC}(A,B)$, or $\ihom(A, B)$ or just $\CC(A,B)$ to mean
 $\Arrows(A,B)$. Here ``$\Hom$'' stands for homomorphism, which is a standard word for
-mappings that preserve some kind of structure. Category theory, and the Yoneda Lemma, it
+mappings that preserve some kind of structure. Category theory, and the Yoneda lemma, it
 it turns out, is mostly about the arrows.
 
 \goodbreak
-At this point every category theory book will list a few dozen examples of categories. 
+At this point every category theory book will list a few dozen examples of categories from
+all over mathematics. 
 These will have strangely truncated names like
-$\cat{Measu}$ or $\cat{Htpy}$ or $\cat{Matr}$.
+$\cat{Measu}$ or $\cat{Htpy}$ or $\cat{Matr}$ that make no sense unless you are
+already an expert in the subject from which the category comes.
 {The general fear of readable names in the mathematical literature is fascinating
 to me, having spent most of my life trying to think up readable names in program source
 code. In the ``modern'' world of \LaTeX\ there is no reason to limit names to being only four
@@ -258,7 +260,7 @@ A category $\CC$ is called {\it locally small} if $\Arrows_{\CC}(A,B)$ is a set 
 $A, B \in \CC$. \end{defn}%
 \ni
 For the rest of this note we will only deal with locally small categories, since in the
-the setup for the Lemma, we are given a category $\CC$ that is locally small.
+the setup for the lemma, we are given a category $\CC$ that is locally small.
 
 Finally, one more notion that we'll need later is the idea of an {\it isomorphism}.
 
@@ -399,7 +401,8 @@ Then you can define $(\beta \circ \alpha)(X) = \beta(X) \circ \alpha(X)$ and you
 right behavior. Similarly, the identity transformation $1_F$ can be defined
 component-wise: $(1_F)(X) = 1_{F(X)}$.
 
-There are a lot of standard notations for this object, none of which I really like. The
+There are a lot of standard notations for the functor category,
+none of which I really like. The
 most popular seems to be $[\CC, \DD]$, but you also see $\DD^{\CC}$, and various  
 abbreviations like $\mathop{\mathit{Fun}}(\CC,\DD)$ or $\mathop{\mathit{Func}}(\CC,\DD)$,
 or $\mathop{\mathit{Funct}}(\CC,\DD)$. I think we should just spell it out and use
@@ -436,14 +439,15 @@ $\Arrows(X,Y)$
 \end{defn}
 
 The notation $\Arrows(X,-)$ needs a bit of explanation. Here the idea is that we have defined
-a mapping with two arguments and an object $X$. Then we use the ``$-$'' symbol as a 
+a mapping with two arguments, but then fixed the object $X$. 
+Then we use the ``$-$'' symbol as a 
 placeholder for the second argument. So then we write $\Arrows(X,Y)$ for
-the value of the map at some other object $Y$. 
+the value of the map as we vary the second argument through all the other objects $Y$. 
 This is a bit of an abuse of notation since we 
 are apparently using the symbol $\Arrows$ to mean two different things. But oh well.
 
 The definition of the mapping for arrows also needs a bit of explanation.
-Given an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ 
+Given $A,B \in \CC$ and an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ 
 applied to $f$ is an arrow that maps $\Arrows(X,A) \to \Arrows(X,B)$.
 We will call this arrow $f_*$.  
 If $g: X \to A$ is in $\Arrows(X,A)$
@@ -461,12 +465,16 @@ Check over this formula in your head, and note that
 there are {\it two} function applications (one for the functor, and one for the post-composition arrow), 
 and two different kinds of placeholder.
 
-Other notations for this functor include just $\CC(X,-)$, $\Hom(X, -)$, $\Hom_\CC(X,
--)$, $H^X$ and $h^X$. In my notational convention we probably should have written this as
-$\Arrows_{\CC}(X, -)$. This kind of functor is also called a {\it hom-functor}.
+Other notations for this functor include $\Hom(X, -)$, $\Hom_\CC(X,
+-)$, $H^X$, $h^X$, and just plain $\CC(X,-)$. 
+In my notation we could have also written this as
+$\Arrows_{\CC}(X, -)$, but I'm lazy. This kind of functor is also called a {\it hom-functor}.
 
-Finally, I'll note here that
-we say that a functor defined this way is the functor {\it represented} by an object $X$.
+Finally, we can give two more important definitions.
+\begin{defn}
+Given an object $X \in \CC$ we call the functor $\Arrows(X,-)$ defined above the functor {\it represented} by $X$.
+\end{defn}
+\ni
 In addition, we can characterize another important relationship between
 objects and functors:
 
@@ -482,12 +490,12 @@ of something complicated (e.g. a single object rather than a whole functor).
 
 \section{Opposites and Duals}
 
-We can actually return to the statement of the Yoneda Lemma now, but 
+We can actually return to the statement of the Yoneda lemma now, but 
 I'm going to take one small tangent first to define one more handy piece of
 the conceptual framework of category theory.
 
 This section is the one optional side quest that I'm including because it comes up in
-comparing different versions of the Lemma. Duality in mathematics comes up in a lot of
+comparing different versions of the lemma. Duality in mathematics comes up in a lot of
 different ways. Covering it all is way beyond the scope of these notes. But the following
 definition is a basic part of category theory so it's worth including.
 
@@ -532,7 +540,7 @@ regular functors from $\CC \to \DD$ {\it covariant}.
 
 \section{Yoneda Again}
 
-Now we have all the language we need to look at the statement of the Lemma again.
+Now we have all the language we need to look at the statement of the lemma again.
 So, here is what we wrote down before, more verbosely, and in my notation.
 
 \begin{lemma}[Yoneda]\label{yoneda} Let $\CC$ be a locally small category, $F:\CC \to \Set$ a functor,
