clean up arrow functor some more

--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -472,6 +472,7 @@ $\Arrows_{\CC}(X, -)$, but I'm lazy. This kind of functor is also called a {\it 
 
 Finally, we can give two more important definitions.
 \begin{defn}
+\label{represented}
 Given an object $X \in \CC$ we call the functor $\Arrows(X,-)$ defined above the functor {\it represented} by $X$.
 \end{defn}
 \ni
@@ -657,10 +658,12 @@ $\Arrows(X, -)$. The definition of this object is really confusing and multi-lay
 I also don't really like the ``$-$'' placeholder symbol but could 
 never think of anything better. Oh well.
 
-Second, we define some terminology around representations of functors when we defined the arrow functor. But 
-it never came up again later. But, one of the things that the lemma implies is that if two objects 
+Second, in definition \ref{represented} we defined some terminology about 
+representations of functors. But 
+it never came up again later. It turns out that one 
+of the things that the lemma implies is that if two objects 
 in a category represent functors that are isomorphic
-then the objects are also isomorphic. The Yoneda lemma also lets us define a notion of {\it universal property} 
+then the objects are also isomorphic. The Yoneda lemma also lets us define a notion of a {\it universal property} 
 of an object $X \in C$ using a representable functor $F$ and a particular object in $F(X)$.
 Any of the references below will go into this in more detail.
 
