--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -423,7 +423,8 @@ of functor categories.
 \section{Represented Functors}
 
 The last conceptual step that we need is a way to relate {\it functors} to {\it
-objects}. The following definition is a natural way to do this.
+objects}. The following definition is a natural way to do this once you see how it works
+but is also probably the most confusing definition in these notes.
 
 \begin{defn}
 Given a locally small category $\CC$ and an object $X \in \CC$ we define a functor
