--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -443,10 +443,10 @@ $\Arrows(X,Y)$
 The notation $\Arrows(X,-)$ needs a bit of explanation. Here the idea is that we have defined
 a mapping with two arguments, but then fixed the object $X$. 
 Then we use the ``$-$'' symbol as a 
-placeholder for the second argument. So then we write $\Arrows(X,Y)$ for
-the value of the map as we vary the second argument through all the other objects $Y$. 
+placeholder for the second argument. So $\Arrows(X,Y)$ is
+the value of the mapping as we vary the second argument through all the other objects $Y$. 
 This is a bit of an abuse of notation since we 
-are apparently using the symbol $\Arrows$ to mean two different things. But oh well.
+are apparently using the symbol $\Arrows$ to mean two different things. Oh well.
 
 The definition of the mapping for arrows also needs a bit of explanation.
 Given $A,B \in \CC$ and an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ 
@@ -455,7 +455,8 @@ We will call this arrow $f_*$.
 If $g: X \to A$ is in $\Arrows(X,A)$
 then the value 
 that we want for $f_*$ at $g$ is $f_*(g) = (f \circ g): X \to B$.
-This mapping is called the {\it post-composition} map of $f$.
+This mapping is called the {\it post-composition} map of $f$ since
+we apply $f$ {\it after} $g$.
 You also see it written as $f \circ -$.
 The {\it pre-composition} map is then $f^*$ or $- \circ f$.
 
