refine some words. cheat sheet

--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -695,9 +695,10 @@ $\Objects$ & Objects in a category category $\CC$. Often just written $\CC$.\\
 $\Arrows(\CC)$ & Arrows in a category. \\
 $\Arrows_\CC(X,Y)$ & Arrows between two objects.  Also written $\Arrows(X,Y)$ or $\Hom(X,Y)$ 
 or $\Hom_\CC(A, B)$ or just $\CC(X,Y)$. \\
+$f: X \to Y$ & An arrow from $X$ to $Y$.\\
 $g \circ f$, $gf$ & Composition of arrows.\\
 $X \iso Y$ & Isomorphism.\\
-$F:\CC \to\DD$ & Functors.\\
+$F:\CC \to\DD$ & A functor from $\CC$ to $\DD$.\\
 $\Fun(\CC, \DD)$ & The functor category between $\CC$ and $\DD$. Also written $[\CC,\DD]$ or $\DD^\CC$.\\
 $\alpha: F \fto G$ & Natural transformation.\\
 $\Nat(F, G)$ & Natural transformations from $F$ to $G$.~Also~written~$[\CC,\DD](F,G)$, or~$\mathop{\mathit {Nat}}(F,G)$ or just~$\Hom(F,G)$. \\
@@ -706,8 +707,11 @@ $\CC(X,-)$, $H^X$, $\mathop{\mathit{hom}}$, or $\Hom(X,-)$. \\
 $f \circ - $, $- \circ f$ & Pre- and post-composition maps. Also written $f_*$ and $f^*$.\\
 \end{tabularx}
 
+\normalsize
+
 \begin{thebibliography}{100}
 
+\small
 \bibitem{carroll} Sean Carroll, \href{https://preposterousuniverse.com/wp-content/uploads/2015/08/grtinypdf.pdf}{\it A No-Nonsense Introduction to General Relativity},  2001.
 
 \bibitem{Goedecke} Julia Goedecke, \href{http://www.julia-goedecke.de/pdf/CategoryTheoryNotes.pdf}{\it Category Theory Notes}, 2013.
