--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -131,17 +131,16 @@ bookmarksopenlevel=10
 
 \newcommand{\fto}{\Rightarrow}
 
-\def\pg{\bigskip\goodbreak
-\ni}
+\def\pg{\bigskip\goodbreak\ni}
 \def\ni{\goodbreak\noindent}
 
 \usepackage{microtype}
 
 \begin{document}
 
-\title{\Large A Speedrun to the Yoneda Lemma}
+\title{\large A Speedrun to the Yoneda Lemma}
 \author{\large Pete Su}
-\date{\large 19 October 2021}
+\date{\normalsize 19 October 2021}
 
 \maketitle
 
@@ -152,7 +151,7 @@ bookmarksopenlevel=10
 The Yoneda Lemma is a basic and beloved result in category theory. Even though it is called
 a ``lemma'', a word usually used to describe a minor result that you prove on the way
 to the main event, the Yoneda lemma {\it is} a main event. It is a result that expresses
-one of the main goals of category theory: it characterizes simple universal facts
+one of the main goals of category theory. It characterizes universal facts
 about general abstract constructs.
 
 Its statement is deceivingly simple \cite{Rhiel2016}:
@@ -167,7 +166,7 @@ $$
 and this mapping is natural in both $F$ and $X$.
 
 \pg
-But as Sean Carroll famously wrote about General Relativity, ``\dots, 
+But as Sean Carroll famously wrote about general relativity, ``\dots, 
 these statements are incomprehensible unless you sling the lingo'' \cite{carroll}.
 
 I am going to do the following dumb thing: having stated a version of the lemma above
@@ -699,8 +698,8 @@ $f: X \to Y$ & An arrow from $X$ to $Y$.\\
 $g \circ f$, $gf$ & Composition of arrows.\\
 $X \iso Y$ & Isomorphism.\\
 $F:\CC \to\DD$ & A functor from $\CC$ to $\DD$.\\
-$\Fun(\CC, \DD)$ & The functor category between $\CC$ and $\DD$. Also written $[\CC,\DD]$ or $\DD^\CC$.\\
 $\alpha: F \fto G$ & Natural transformation.\\
+$\Fun(\CC, \DD)$ & The functor category between $\CC$ and $\DD$. Also written $[\CC,\DD]$ or $\DD^\CC$.\\
 $\Nat(F, G)$ & Natural transformations from $F$ to $G$.~Also~written~$[\CC,\DD](F,G)$, or~$\mathop{\mathit {Nat}}(F,G)$ or just~$\Hom(F,G)$. \\
 $\Arrows(X, -)$ & The represented or ``arrow'' functor for $X$. Also called the ``hom'' functor and written 
 $\CC(X,-)$, $H^X$, $\mathop{\mathit{hom}}$, or $\Hom(X,-)$. \\
