--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -151,7 +151,7 @@ bookmarksopenlevel=10
 The Yoneda Lemma is a basic and beloved result in category theory. Even though it is called
 a ``lemma'', a word usually used to describe a minor result that you prove on the way
 to the main event, the Yoneda lemma {\it is} a main event. It is a result that expresses
-one of the main goals of category theory. It characterizes universal facts
+one of the main goals of category theory: it characterizes universal facts
 about general abstract constructs.
 
 Its statement is deceivingly simple \cite{Rhiel2016}:
