--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -135,12 +135,13 @@ bookmarksopenlevel=10
 \def\ni{\goodbreak\noindent}
 
 \usepackage{microtype}
+\usepackage{datetime2}
 
 \begin{document}
 
 \title{\large A Speedrun to the Yoneda Lemma}
 \author{\large Pete Su}
-\date{\normalsize 19 October 2021}
+\date{\normalsize 2021-10-18}
 
 \maketitle
 
@@ -238,18 +239,18 @@ it turns out, is mostly about the arrows.
 At this point every category theory book will list a few dozen examples of categories from
 all over mathematics. 
 These will have strangely truncated names like
-$\cat{Measu}$ or $\cat{Htpy}$ or $\cat{Matr}$ that make no sense unless you are
-already an expert in the subject from which the category comes.
+$\cat{Measu}$ or $\cat{Htpy}$ or $\cat{Matr}$ and the examples will little sense unless you are
+already familiar with the subject from which the category comes.
 {The general fear of readable names in the mathematical literature is fascinating
 to me, having spent most of my life trying to think up readable names in program source
 code. In the ``modern'' world of \LaTeX\ there is no reason to limit names to being only four
 or five random letters in length. Thus, I have done the unthinkable and written many names
 out in full.}
-For these short notes I think the only specific
+For this note the only specific
 category that we will run into is $\cat{Set}$, where the objects are sets and the arrows
 are mappings between sets.
 
-Speaking of sets, the definition of categories we were careful about not calling anything
+Speaking of sets, in the definition of categories we were careful about not calling anything
 a {\it set}. This is because some categories involve collections of things that are too
 ``large'' to be called sets and not get into set theory trouble. Here are two more short
 definitions about this that we will need.
