--- a/1912.10642v6/ct-notes-new.tex
+++ b/1912.10642v6/ct-notes-new.tex
@@ -3160,7 +3160,7 @@ The answer to both question is \emph{yes}, and follows from one of the most impo
  between the morphisms of $\cat{C}$ from $X$ to $Y$ and the natural transformations from the presheaf $\Hom_\cat{C} (-,X):\cat{C}^\op\to\Set$ represented by $X$ to the presheaf $\Hom_\cat{C} (-,Y):\cat{C}^\op\to\Set$ represented by $Y$.
 \end{thm}
 
-The dual statement, replacing $\cat{C}$ by $\cat{C}^\op$ reads as follows. 
+The dual statement, replacing $\cat{C}^\op$ by $\cat{C}$ reads as follows. 
 \begin{cor}
  Let $\cat{C}$ be a category, and let $X$ and $Y$ be objects of $\cat{C}$. There is a natural bijection of sets 
  $$
