--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -238,18 +238,8 @@ mappings that preserve some kind of structure. Category theory, and the Yoneda l
 it turns out, is mostly about the arrows.
 
 \goodbreak
-At this point every category theory book will list a few dozen examples of categories from
-all over mathematics. 
-These will have strangely truncated names like
-$\cat{Measu}$ or $\cat{Htpy}$ or $\cat{Matr}$ and the examples will little sense unless you are
-already familiar with the subject from which the category comes.
-{The general fear of readable names in the mathematical literature is fascinating
-to me, having spent most of my life trying to think up readable names in program source
-code. In the ``modern'' world of \LaTeX\ there is no reason to limit names to being only four
-or five random letters in length. Thus, I have done the unthinkable and written many names
-out in full.}
 For this note the only specific
-category that we will run into is $\cat{Set}$, where the objects are sets and the arrows
+category that we will run into is $\Set$, where the objects are sets and the arrows
 are mappings between sets.
 
 Speaking of sets, in the definition of categories we were careful about not calling anything
@@ -277,7 +267,7 @@ $g: B \to A$ such that $gf = 1_X$ and $fg = 1_Y$. We say that the objects $X$ an
 objects in a category are isomorphic to each other we write $X \iso Y$.
 \end{defn}
 \ni
-Note that in the category $\cat{Set}$ the isomorphisms are exactly the invertible mappings
+Note that in the category $\Set$ the isomorphisms are exactly the invertible mappings
 between sets. An invertible mapping is also called a {\it bijection} (because it's injective
 and surjective, you see), so you will see that word sometimes.
 
@@ -467,7 +457,10 @@ You also see it written as $f \circ -$.
 The {\it pre-composition} map is then $f^*$ or $- \circ f$.
 
 Thus, we have worked out that the value of $\Arrows(X,-)$ at $f$ 
-should be the arrow $f \circ -$.
+should be the arrow $f \circ -$. Sometimes you will see this written
+$\Arrows(X, f) = f \circ -$, which I find a bit odd because now we are
+overloading the kinds of things that can go into the ``$-$'' slot.
+
 Check over this formula in your head, and note that 
 there are {\it two} function applications (one for the functor, and one 
 inside that for the post-composition arrow), 
@@ -654,9 +647,8 @@ and let $F:\CC \to \Set$ be a functor. Then
 Your reward for having climbed with me all the way the abstraction ladder to get to our result
 is that I'm going to give you one more surprise step up in abstraction!
 
-Suppose you apply the Yoneda lemma, and you make the 
-functor $F$ in the statement the represented 
-functor for some object $Y$ in $\CC$. Then
+Suppose you are given an object $Y$ and you apply the Yoneda lemma
+by substituting $\Arrows(Y,-)$ for the functor $F$. Then
 $$
 \Nat(\Arrows(X, -),\Arrows(Y,-)) \iso \Arrows(Y,-)(X) = \Arrows(Y,X)
 $$ or
@@ -667,17 +659,22 @@ Note the order of the arguments! We can also write:
 $$
 \Arrows(X,Y) \iso \Nat(\Arrows(-, X),\Arrows(-,Y))
 $$
-Now the idea is to use this fact to define a new functor $\yo: \CC \to \Arrows(\CC^\op, \Set)$ that maps
-objects to arrow functors and arrows to their {\it pre}-composition map. So for each object $X$ and arrow $f$ define
+Now the idea is to use this fact to define a yet another 
+new functor $\yo: \CC \to \Arrows(\CC^\op, \Set)$ that maps
+objects to arrow functors and arrows to their {\it pre}-composition map. 
+So for each object $Y$ and arrow $f$ define
 $$
-\yo(X) = \Arrows(-, X) : \CC^\op \to \Set
+\yo(Y) = \Arrows(-, Y) : \CC^\op \to \Set
 $$
 and
 $$
-\yo(f) = \Arrows(-, f) = f^* = - \circ f 
+\yo(f) = f^* = - \circ f 
 $$
-Notice the direction of the arrows! 
-Using the lemma we can show that this functor is an {\it embedding} 
+Notice the direction of the arrows! This functor wraps up all of the represented
+for all of the objects in $\CC$ into one mapping, and so is our last jump up
+the abstraction chain.
+
+Using the Yoneda lemma we can show that this functor is an {\it embedding} 
 of $\CC$ inside $\Arrows(\CC^\op, \Set)$, which amounts to meaning
 that both mappings above are invertible. The functor $\yo$ is then called
 the {\it Yoneda} embedding. Of course you can define this in the dual way too
@@ -685,8 +682,7 @@ if you want.
 
 This is the origin of statements like ``The Yoneda lemma says that every object
 in $\CC$ can be understood by understanding the maps into (or out of) it.''.
-This notion can be made precise by proving the following corollary, which I will not do here
-because I'm just a poseur.
+This notion can be made precise:
 \begin{cor}
 Let $\CC$, $X$, and $Y$ be given as above.
 \begin{itemize}
@@ -697,19 +693,6 @@ In particular, if X and Y represent the same functor then they must be isomorphi
 \end{itemize}
 \end{cor}
 
-\section{Final Thoughts}
-
-Two last thoughts. First, I wish I could think of a more meaningful notation than $\Arrows(X, -)$ for
-the arrow functor. But oh well, no one else can either.
-
-Second, I need to shout out the 
-\href{https://www.youtube.com/watch?v=SsgEvrDFJsM}{excellent tutorial video by Emily Rhiel} 
-that demonstrates how this result works
-the specific category of matrices \cite{Rhiel2020}. After watching this talk the second time
-I felt like I finally knew how this whole result works. Maybe you should have just watched that instead.
-
-Last question: If $G$ is a group why is the category made up of a single object
-one arrow for each element of $G$ called ${\mathbf B}G$? Why {\bf B}?
 \newpage
 
 \section{Cheat Sheet}
