--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -403,7 +403,7 @@ none of which I really like. The
 most popular seems to be $[\CC, \DD]$, but you also see $\DD^{\CC}$, and various  
 abbreviations like $\mathop{\mathit{Fun}}(\CC,\DD)$ or $\mathop{\mathit{Func}}(\CC,\DD)$,
 or $\mathop{\mathit{Funct}}(\CC,\DD)$. I think we should just spell it out and use
-$\Fun(\CC,\DD)$. So there.
+$\Fun(\CC,\DD)$ or $\Arrows(\CC, \DD)$. So there.
 
 Now we can define this notation:
 
@@ -651,36 +651,28 @@ Suppose you are given an object $Y$ and you apply the Yoneda lemma
 by substituting $\Arrows(Y,-)$ for the functor $F$. Then
 $$
 \Nat(\Arrows(X, -),\Arrows(Y,-)) \iso \Arrows(Y,-)(X) = \Arrows(Y,X)
-$$ or
-$$
-\Arrows(X,Y) \iso \Nat(\Arrows(Y, -),\Arrows(X,-))
 $$
 Note the order of the arguments! We can also write:
 $$
 \Arrows(X,Y) \iso \Nat(\Arrows(-, X),\Arrows(-,Y))
 $$
-Now the idea is to use this fact to define a yet another 
-new functor $\yo: \CC \to \Arrows(\CC^\op, \Set)$ that maps
-objects to arrow functors and arrows to their {\it pre}-composition map. 
-So for each object $Y$ and arrow $f$ define
+Each of the functors $\Arrows(-, X)$ is in the category $\Fun(\CC^\op, \Set)$, because
+that's how we defined the represented functors. So now let's jump one more level of
+abstraction and define a functor {\it values} are these functors. That is define
+$\yo:\CC \to \Fun(\CC^\op, \Set)$ by
 $$
-\yo(Y) = \Arrows(-, Y) : \CC^\op \to \Set
+\yo(Y) = \Arrows(-, Y)
 $$
 and
 $$
-\yo(f) = f^* = - \circ f 
+\yo(f) = f^* = - \circ f .
 $$
-Notice the direction of the arrows! This functor wraps up all of the represented
-for all of the objects in $\CC$ into one mapping, and so is our last jump up
-the abstraction chain.
+The Yoneda lemma can be used to prove that these mappings are invertible, so $\yo$
+completely characterizes, or {\it embeds}, the category $\CC$ inside the functor
+category $\Fun(\CC^\op, \Set)$. Thus $\yo$ is called the {\it Yoneda embedding},
+and you can read about the rest of the details in the references.
 
-Using the Yoneda lemma we can show that this functor is an {\it embedding} 
-of $\CC$ inside $\Arrows(\CC^\op, \Set)$, which amounts to meaning
-that both mappings above are invertible. The functor $\yo$ is then called
-the {\it Yoneda} embedding. Of course you can define this in the dual way too
-if you want.
-
-This is the origin of statements like ``The Yoneda lemma says that every object
+This result is the origin of statements like ``The Yoneda lemma says that every object
 in $\CC$ can be understood by understanding the maps into (or out of) it.''.
 This notion can be made precise:
 \begin{cor}
