--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -119,7 +119,7 @@ bookmarksopenlevel=10
 \DeclareMathOperator{\Hom}{\mathit{Hom}}
 \DeclareMathOperator{\ihom}{\mathit{hom}}
 \DeclareMathOperator{\Nat}{\mathit{Natural}}
-\DeclareMathOperator{\Fun}{\mathit{Functor}}
+\DeclareMathOperator{\Fun}{\mathit{Functors}}
 \def\objc{\Objects(\cat{C})}
 \newcommand{\Set}{\fcat{Sets}}           % Sets
 \newcommand{\iso}{\cong}                % Isomorphism
@@ -238,7 +238,13 @@ mappings that preserve some kind of structure. Category theory, and the Yoneda l
 it turns out, is mostly about the arrows.
 
 \goodbreak
-For this note the only specific
+I'm going to break with well established tradition in the mathematical literature and
+fully mostly spell out names for clarity rather than engaging in the strange and random
+abbreviations that I see in most category theory texts. The general fear of readable names 
+in the mathematical literature is fascinating
+to me, having spent most of my life trying to think up readable names in program source
+code. Life is too short to deal with names like ``Ob'', or $\cat{Htpy}$, or $\cat{Matr}$.
+Also, for this note the only specific
 category that we will run into is $\Set$, where the objects are sets and the arrows
 are mappings between sets.
 
@@ -403,7 +409,7 @@ none of which I really like. The
 most popular seems to be $[\CC, \DD]$, but you also see $\DD^{\CC}$, and various  
 abbreviations like $\mathop{\mathit{Fun}}(\CC,\DD)$ or $\mathop{\mathit{Func}}(\CC,\DD)$,
 or $\mathop{\mathit{Funct}}(\CC,\DD)$. I think we should just spell it out and use
-$\Fun(\CC,\DD)$, or even better: $\Arrows(\CC, \DD)$, since functors are just a kind of arrow.
+$\Fun(\CC,\DD)$.
 So there.
 
 Now we can define this notation:
@@ -646,7 +652,7 @@ and let $F:\CC \to \Set$ be a functor. Then
 \section{One More Thing}
 
 Your reward for having climbed with me all the way the abstraction ladder to get to our result
-is more abstraction.
+is yet more abstraction!
 
 Suppose you are given an object $Y$ and you apply the Yoneda lemma
 by substituting $\Arrows(Y,-)$ for the functor $F$. Then
@@ -662,27 +668,28 @@ that's how we defined the represented functors. So now let's jump one more level
 abstraction and define a functor that maps objects to the functors that they represent,
 and arrows to the natural transformations between those functors.
 Given an object $Y\in\CC$ define
-$\yo:\CC \to \Arrows(\CC^\op, \Set)$ by
+$\yo:\CC \to \Fun(\CC^\op, \Set)$ by
 $$
 \yo(Y) = \Arrows(-, Y) : \CC^\op \to \Set
 $$
 and given an arrow $f: A \to B$ with $A,B \in \CC$ define
 $$
-\yo(f) = f_* = f \circ - : \Arrows(-,A) \fto \Arrows(-,B)
+\yo(f) = f_* = (f \circ -) : \Arrows(-,A) \fto \Arrows(-,B)
 $$
-If you compare 
-this to the definition of the represented functors you can see we are
-to varying all the objects that used to be fixed. So this is yet another
-level of wrapping all the arguments in that definition. My head hurts.
+This definition has the same ``shape'' as the one for represented functors, but we have
+abstracted over all the objects and arrows. Thus our abstraction ladder is again one level
+higher.  Also, you have your
+choice of writing this mapping as $\yo:\CC \to \Fun(\CC^\op, \Set)$ or
+$\yo:\CC^\op \to \Fun(\CC, \Set)$. All that changes are the order of the arguments.
 
-The Yoneda lemma can be used to prove that these mappings are naturally invertible, so $\yo$
+The Yoneda lemma then can be used to prove that these mappings are naturally invertible, so $\yo$
 completely characterizes, or {\it embeds}, the category $\CC$ inside the functor
-category $\Arrows(\CC^\op, \Set)$. Thus $\yo$ is called the {\it Yoneda embedding},
+category $\Fun(\CC^\op, \Set)$. Thus $\yo$ is called the {\it Yoneda embedding},
 and you can read about the rest of the details in the references.
 
-This embedding says something like ``Every object
+Now we know why people say things like ``Every object
 in $\CC$ can be understood by understanding the maps into (or out of) it.''
-This can be made precise:
+More precisely:
 \begin{cor}
 Let $\CC$, $X$, and $Y$ be given as above.
 \begin{itemize}
@@ -699,8 +706,7 @@ In particular, if X and Y represent the same functor then they must be isomorphi
 \small
 \renewcommand{\arraystretch}{1.1}
 \begin{tabularx}{.9\linewidth}{l X}
-$\CC, \DD$ & Categories. \\
-$\CC^\op$ & Opposite categories. \\
+$\CC$, $\CC^\op$ & Categories and opposite categoies. \\
 $\Objects$ & Objects in a category category $\CC$. Often just written $\CC$.\\
 $\Arrows(\CC)$ & Arrows in a category. \\
 $\Arrows_\CC(X,Y)$ & Arrows between two objects.  Also written $\Arrows(X,Y)$ or $\Hom(X,Y)$ 
@@ -710,12 +716,13 @@ $g \circ f$, $gf$ & Composition of arrows.\\
 $X \iso Y$ & Isomorphism.\\
 $F:\CC \to\DD$ & A functor from $\CC$ to $\DD$.\\
 $\alpha: F \fto G$ & Natural transformation.\\
-$\Fun(\CC, \DD)$ & The functor category between $\CC$ and $\DD$. Same as $\Arrows(\CC,\DD)$ if you want. Also written $[\CC,\DD]$ or $\DD^\CC$.\\
+$\Fun(\CC, \DD)$ & Functor category between $\CC$ and $\DD$. Also $[\CC,\DD]$ or $\DD^\CC$.\\
 $\Nat(F, G)$ & The collection of natural transformations from $F$ to $G$. 
 Also written $[\CC,\DD](F,G)$, or~$\mathop{\mathit {Nat}}(F,G)$ or just~$\Hom(F,G)$. \\
 $\Arrows(X, -)$ & The represented or ``arrow'' functor for $X$. Also called the ``hom'' functor and written 
 $\CC(X,-)$, $H^X$, $\mathop{\mathit{hom}}$, or $\Hom(X,-)$. \\
 $f \circ - $, $- \circ f$ & Pre- and post-composition maps. Also written $f_*$ and $f^*$.\\
+$\yo$ & Yoneda Embedding.\\
 \end{tabularx}
 
 \normalsize
