--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -651,7 +651,7 @@ and let $F:\CC \to \Set$ be a functor. Then
 
 \section{One More Thing}
 
-Your reward for having climbed with me all the way the abstraction ladder to get to our result
+Your reward for having climbed with me all the way up to the lemma
 is yet more abstraction!
 
 Suppose you are given an object $Y$ and you apply the Yoneda lemma
@@ -678,17 +678,16 @@ $$
 $$
 This definition has the same ``shape'' as the one for represented functors, but we have
 abstracted over all the objects and arrows. Thus our abstraction ladder is again one level
-higher.  Also, you have your
-choice of writing this mapping as $\yo:\CC \to \Fun(\CC^\op, \Set)$ or
-$\yo:\CC^\op \to \Fun(\CC, \Set)$. All that changes are the order of the arguments.
+higher.\footnote{We should have also defined this as
+$\yo:\CC^\op \to \Fun(\CC, \Set)$. All that changes are the order of the arguments}
 
 The Yoneda lemma then can be used to prove that these mappings are naturally invertible, so $\yo$
 completely characterizes, or {\it embeds}, the category $\CC$ inside the functor
 category $\Fun(\CC^\op, \Set)$. Thus $\yo$ is called the {\it Yoneda embedding},
 and you can read about the rest of the details in the references.
 
-Now we know why people say things like ``Every object
-in $\CC$ can be understood by understanding the maps into (or out of) it.''
+Now we know why people say things like, ``Every object
+in a category can be understood by understanding the maps into (or out of) it.''
 More precisely:
 \begin{cor}
 Let $\CC$, $X$, and $Y$ be given as above.
