--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -118,9 +118,9 @@ menucolor=blue,linktocpage=true]{hyperref}
 
 \begin{document}
 
-\title{\large A Speedrun to the Yoneda Lemma}
+\title{\large A Yoneda Speedrun}
 \author{\large Pete Su}
-\date{\normalsize 2021-10-18}
+\date{\normalsize 2021-10-20}
 
 \maketitle
 
