--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -215,8 +215,9 @@ spelled out names for clarity rather than engaging in the strange and random abb
 that I see in most category theory texts. The general fear of readable names in the
 mathematical literature is fascinating to me, having spent most of my life trying to think
 up readable names in program source code. Life is too short to deal with names like
-$\mathop{\mathit{ob}}$, or $\cat{Htpy}$, or $\cat{Matr}$. Also, for this note the only
-specific category that we will run into is $\Set$, where the objects are sets and the
+$\mathop{\mathit{ob}}$, or $\cat{Htpy}$, or $\cat{Matr}$. Luckily, for this note the only
+specific category that we will run into is the straightforwardly named $\Set$, 
+where the objects are sets and the
 arrows are mappings between sets.
 
 Speaking of sets, in the definition of categories we were careful about not calling
@@ -288,10 +289,11 @@ If $F: \CC \to \DD$ is a functor from a category $\CC$ to another category $\DD$
 object $X \in \CC$ we may write $F X$ to mean $F(X)$. This is analogous to the more
 compact notation for composition of arrows above.
 
-Functors are notationally confusing because we are using one letter to denote two
+Functors can be notationally confusing because we are using one name to denote two
 mappings. So if $F: \CC \to \DD$ and $X \in \CC$ then $F(X)$ is the functor applied to the
 object, which will be an object in $\DD$. On the other hand, if $f : A \to B$ is an arrow
-in $\CC$ then $F(f)$ is an arrow in $\DD$. This seems obvious from the definition but in
+in $\CC$ then we also write $F(f) \in \DD$ for the same functor applied to the arrow.. 
+This seems obvious from the definition but in
 proofs and calculations the notations will often shift back and forth without enough
 context and can be disorienting.
 
@@ -303,7 +305,9 @@ categories, then natural transformations are arrows between functors.
 Let $\CC$ and $\DD$ be categories, and let $F$ and $G$ be functors $\CC \to \DD$. To
 define a \emph{natural transformation} $\alpha$ from $F$ to $G$, we assign to each object
 $X$ of $\CC$, an arrow $\alpha_X:FX\to GX$ in $\DD$, called the \emph{component} of
-$\alpha$ at $X$. In addition, for each arrow $f:X\to Y$ of $\CC$, the following diagram
+$\alpha$ at $X$. 
+
+In addition, for each arrow $f:X\to Y$ of $\CC$, the following diagram
 has to commute:
   $$
   \begin{tikzcd}
