--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -121,7 +121,7 @@ menucolor=blue,linktocpage=true]{hyperref}
 
 \title{\large A Yoneda Speedrun}
 \author{\large Pete Su}
-\date{\normalsize 2021-10-20}
+\date{\normalsize 2021-10-21}
 
 \maketitle
 
@@ -554,8 +554,9 @@ $$
 naturally in $X \in \CC$ and $F \in \pshf{\CC}$.  
 \end{lemma}
 \ni
-Here $[\CCop, \Set]$ is the category of functors from $\CCop$ to $\Set$ and $\h_X$ is
-$\Arrows(-,X)$. The notation $\pshf{\CC}(\h_X, F)$ denotes the arrows in the functor
+Here $[\CCop, \Set]$ is the category of functors from $\CCop$ to $\Set$ and 
+$\h_X$ means $\Arrows(-,X)$.
+The notation $\pshf{\CC}(\h_X, F)$ denotes the arrows in the functor
 category $\pshf{\CC}$ between $\h_X$ and $F$, so it's the same as $\Nat(\h_X, F)$.
 
 \pg
@@ -585,8 +586,8 @@ He uses the $[\CC, \Set]$ notation for the functor category, and $\mathop{\mathi
 where we use $\Nat$.
 
 \pg
-Paolo Perrone \cite{Perrone} writes the contravariant version, and uses the standard term
-"presheaf" for a functor from $\CCop$ to $\Set$.
+Paolo Perrone \cite{Perrone} writes the dual version, and uses the standard term
+"presheaf" to mean a functor from $\CCop$ to $\Set$.
 
 \begin{lemma}[Yoneda]\label{yoneda-perrone} Let $\cat{C}$ be a category, let $X$ be an
  object of $\cat{C}$, and let $F:\cat{C}^\op\to\Set$ be a presheaf on $\cat{C}$. Consider
